# Player

./: .gitignore  CMakeLists.txt  qml.qrc
qml/: main.qml
qml/Components/: CustomButton.qml  CustomProgressBar.qml  TopBar.qml
qml/Pages/: Home.qml  ShowImage.qml  ShowVideo.qml
src/: main.cpp
src/ImageManager/: imagemanager.cpp  imagemanager.h
src/ThreadManager/: threadmanager.cpp  threadmanager.h
src/VideoManager/: videomanager.cpp  videomanager.h
